--- a/components/Carousel/CarouselComponent.module.scss
+++ b/components/Carousel/CarouselComponent.module.scss
@@ -1,6 +1,6 @@
 .carousel {
   position: relative;
-  flex: 1.1 1;
+  flex: 1.1;
 
   &__main-image {
     width: 100%;
@@ -18,8 +18,6 @@
     z-index: 2;
   }
 
-
-
   &__image-small {
     z-index: 1;
     img {
@@ -27,8 +25,6 @@
     }
   }
 }
-
-
 
 @media screen and (max-width: 750px) {
   .carousel__image-small img {
