Fixed ssr in games, removed dispatch to stor, threw props in component, improved pagination, no double rendering

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -82,3 +82,11 @@ body .btn-primary:active {
   background-color: var(--background-color-red-active) !important;
   border-color: var(--background-color-red-hover) !important;
 }
+
+body .navbar {
+  background-color: #413939;
+}
+
+body .MuiList-root {
+  background-color: #413939;
+}
