--- a/components/Game/GameList/GameList.module.scss
+++ b/components/Game/GameList/GameList.module.scss
@@ -1,6 +1,6 @@
 .game-card-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 24px;
+  width: 100%;
 }
