--- a/components/Game/GameCard/GameCard.module.scss
+++ b/components/Game/GameCard/GameCard.module.scss
@@ -1,8 +1,8 @@
 .game-card {
-  background-color: #1e1e1e;
+  background-color: #1f2937;
   border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
   cursor: pointer;
   position: relative;
