--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,20 +1,25 @@
 .main-page {
-  position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1rem;
 
-  &__spinner {
+  &__content {
     display: flex;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    flex-direction: column;
+    max-width: 1200px;
+    padding: 0 24px;
+    margin: auto;
+    margin-top: 4rem;
+  }
+
+  &__games-content {
+    display: flex;
+    gap: 40px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .main-page__games-content {
+    flex-direction: column-reverse;
   }
 }
