Finalized the global spinner, redesigned the filter + a few more edits

--- a/components/Game/GameDetails/GameDetailsContent.module.scss
+++ b/components/Game/GameDetails/GameDetailsContent.module.scss
@@ -25,7 +25,7 @@
   }
 
   &__rating {
-    background-color: var(--background-color-red);
+    background-color: var(--button-color-purple);
     padding: 4px;
     border-radius: 4px;
   }
