--- a/components/UI/Navbar.module.scss
+++ b/components/UI/Navbar.module.scss
@@ -1,7 +1,8 @@
 body .navbar {
   position: sticky;
   background-color: #111827;
-  border: 1px solid #1f2937;
+  border: 1px solid var(--color-primary);
+  z-index: 3;
 
   &__toolbar {
     position: relative;
